Added Get operations for all entities

--- a/EquipmentRepairServiceCenter.ASP/Views/Accounts/RegisterEmployee.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Accounts/RegisterEmployee.cshtml
@@ -96,7 +96,7 @@
 
         <div class="action-btn-container">
             <button class="action-btn" type="submit">Register</button>
-            <a class="back-btn" href="/">Back</a>
+            <a class="back-btn" href="/Home/AdminsPage">Back</a>
         </div>
     </form>
 </div>
