--- a/EquipmentRepairServiceCenter.ASP/Views/Faults/GetAll.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Faults/GetAll.cshtml
@@ -15,6 +15,8 @@
         <a class="a_addit" href="/Orders/GetFaultsByClient">Search by clients</a>
     </form>  
 
+    <a class="a-create">Create</a>
+
     <table class="table">
         <thead>
             <tr>
@@ -23,6 +25,8 @@
                 <th>Repairing Model</th>
                 <th>Repairing Methods</th>
                 <th>Price</th>
+                <th>Update</th>
+                <th>Delete</th>
             </tr>
         </thead>
         <tbody>
@@ -34,6 +38,8 @@
                     <td><a href="/RepairingModels/GetById?id=@fault.RepairingModelId" style="text-decoration: underline;">@fault.RepairingModel.Name</a></td>
                     <td>@fault.RepairingMethods</td>
                     <td>@fault.Price</td>
+                    <td><a class="ud-button">Update</a></td>
+                    <td><a class="ud-button">Delete</a></td>
                 </tr>
             }
         </tbody>
