--- a/EquipmentRepairServiceCenter.ASP/Views/Home/AdminsPage.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Home/AdminsPage.cshtml
@@ -1,46 +1,12 @@
 ﻿
 <div class="admins-container">
-    <div class="inner-admins-block">
-        <h3>Get</h3>
-
-        <ul class="main-menu-admin">
-            <li><a href="/Employees/GetAll">Employees</a></li>
-            <li><a href="/Faults/GetAll">Faults</a></li>
-            <li><a href="/Orders/GetAll">Orders</a></li>
-        </ul>
-    </div>
-
-    <div class="inner-admins-block">
-        <h3>Create</h3>
-
-        <ul class="main-menu-admin">
-            <li style="background-color: #d4ffd7"><a href="/Accounts/RegisterEmployee">Employees</a></li>
-            <li style="background-color: #d4ffd7"><a href="/Faults/Create">Faults</a></li>
-            <li style="background-color: #d4ffd7"><a href="/RepairingModels/Create">Repairing Models</a></li>
-        </ul>
-    </div>
+    <a class="a-button" href="/Clients/GetAll">Clients</a>
+    <a class="a-button" href="/Employees/GetAll">Employees</a>
+    <a class="a-button" href="/Faults/GetAll">Faults</a>
+    <a class="a-button" href="/Orders/GetAll">Orders</a>
+    <a class="a-button" href="/RepairingModels/GetAll">Repairing Models</a>
+    <a class="a-button" href="/ServicedStores/GetAll">Serviced Stores</a>
+    <a class="a-button" href="/SpareParts/GetAll">Spare Parts</a>
+    <a class="a-button" href="/UsedSpareParts/GetAll">Used Spare Parts</a>
+    <a class="a-button" href="/Users/GetAll">Users</a>
 </div>
-
-<div class="admins-container">
-    <div class="inner-admins-block">
-        <h3>Update</h3>
-
-        <ul class="main-menu-admin">
-            <li style="background-color: #f5f5d3"><a href="/Employees/GetAllForUpdate">Employees</a></li>
-            <li style="background-color: #f5f5d3"><a href="/Faults/GetAllForUpdate">Faults</a></li>
-            <li style="background-color: #f5f5d3"><a href="/RepairingModels/GetAllForUpdate">Repairing Models</a></li>
-        </ul>
-    </div>
-
-    <div class="inner-admins-block">
-        <h3>Delete</h3>
-
-        <ul class="main-menu-admin">
-            <li style="background-color: #fccaea"><a href="/Employees/GetAllForDelete">Employees</a></li>
-            <li style="background-color: #fccaea"><a href="/Faults/GetAllForDelete">Faults</a></li>
-            <li style="background-color: #fccaea"><a href="/RepairingModels/GetAllForDelete">Repairing Models</a></li>
-        </ul>
-    </div>
-</div>
-
-<a class="back-btn" href="/Home/Index">Back</a>
