--- a/EquipmentRepairServiceCenter.ASP/Views/Orders/GetAll.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Orders/GetAll.cshtml
@@ -34,6 +34,8 @@
         <button style="margin-top: 10px" class="action-btn" type="submit">Search</button>
     </form>  
 
+    <a class="a-create">Create</a>
+
     <table class="table">
         <thead>
             <tr>
@@ -47,6 +49,8 @@
                 <th>Employee</th>
                 <th>Price</th>
                 <th>Guarantee (months)</th>
+                <th>Update</th>
+                <th>Delete</th>
             </tr>
         </thead>
         <tbody>
@@ -70,6 +74,8 @@
                     {
                         <td>-</td>
                     }
+                    <td><a class="ud-button">Update</a></td>
+                    <td><a class="ud-button">Delete</a></td>
                 </tr>
             }
         </tbody>
