--- a/EquipmentRepairServiceCenter.ASP/Views/_ViewImports.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/_ViewImports.cshtml
@@ -4,5 +4,9 @@
 @using EquipmentRepairServiceCenter.DTO.Employee
 @using EquipmentRepairServiceCenter.DTO.RepairingModel
 @using EquipmentRepairServiceCenter.DTO.Fault
+@using EquipmentRepairServiceCenter.DTO.SparePart
+@using EquipmentRepairServiceCenter.DTO.User
+@using EquipmentRepairServiceCenter.DTO.UsedSparePart
 @using EquipmentRepairServiceCenter.Domain.Models
 @using EquipmentRepairServiceCenter.ASP.ViewModels
+@using EquipmentRepairServiceCenter.Domain.Models.People
