--- a/EquipmentRepairServiceCenter.ASP/Views/Employees/GetAll.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Employees/GetAll.cshtml
@@ -15,6 +15,8 @@
         <button style="margin-top: 10px" class="action-btn" type="submit">Search</button>
     </form>  
 
+    <a class="a-create">Create</a>
+
     <table class="table">
         <thead>
             <tr>
@@ -24,6 +26,8 @@
                 <th>Middle Name</th>
                 <th>Position</th>
                 <th>Work Experience (years)</th>
+                <th>Update</th>
+                <th>Delete</th>
             </tr>
         </thead>
         <tbody>
@@ -36,6 +40,8 @@
                     <td>@employee.MiddleName</td>
                     <td>@employee.Position</td>
                     <td>@employee.WorkExperienceInYears</td>
+                    <td><a class="ud-button">Update</a></td>
+                    <td><a class="ud-button">Delete</a></td>
                 </tr>
             }
         </tbody>
