--- a/EquipmentRepairServiceCenter.ASP/Views/Orders/GetForEmployee.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Orders/GetForEmployee.cshtml
@@ -68,5 +68,5 @@
             }
         </tbody>
     </table>
-    <a class="back-btn" href="/Home/AdminsPage">Back</a>
+    <a class="back-btn" href="/Home/Index">Back</a>
 </div>
