--- a/EquipmentRepairServiceCenter.ASP/wwwroot/css/containers.css
+++ b/EquipmentRepairServiceCenter.ASP/wwwroot/css/containers.css
@@ -48,10 +48,9 @@
 
 .admins-container {
     display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: space-around;
-    margin-top: 30px;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
 }
 
 .inner-admins-block {
