added crud operations for all entities

--- a/EquipmentRepairServiceCenter.ASP/Views/Accounts/RegisterEmployee.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Accounts/RegisterEmployee.cshtml
@@ -60,7 +60,7 @@
             <label asp-for="Email"></label>
             <div>
                 <input class="input-props" asp-for="Email" />
-                <span class="error-mes-span" asp-validation-for="Email"></span>
+                <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="Email"></span>
             </div>
         </div>
 
@@ -82,7 +82,7 @@
             <label asp-for="Password"></label>
             <div>
                 <input class="input-props" asp-for="Password" />
-                <span class="error-mes-span" asp-validation-for="Password"></span>
+                <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="Password"></span>
             </div>
         </div>
 
@@ -90,7 +90,7 @@
             <label asp-for="ConfirmPassword"></label>
             <div>
                 <input class="input-props" asp-for="ConfirmPassword" />
-                <span class="error-mes-span" asp-validation-for="ConfirmPassword"></span>
+                <span class="error-mes-span" style="color: red; font-size: 90%;" asp-validation-for="ConfirmPassword"></span>
             </div>
         </div>
 
