--- a/EquipmentRepairServiceCenter.ASP/Views/Faults/Create.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Faults/Create.cshtml
@@ -46,7 +46,7 @@
 
         <div class="action-btn-container">
             <button class="action-btn" type="submit">Create</button>
-            <a class="back-btn" href="/Home/AdminsPage">Back</a>
+            <a class="back-btn" href="/Faults/GetAll">Back</a>
         </div>
     </form>
 </div>
