--- a/EquipmentRepairServiceCenter.ASP/Views/Orders/Create.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Orders/Create.cshtml
@@ -29,7 +29,7 @@
 
     <form class="creation-form" method="post" asp-action="Create">
         <div class="field-container">
-            <label asp-for="RepairingModelType">Equipnemt Type</label>
+            <label asp-for="RepairingModelType">Equipment Type</label>
             <div>
                 <select class="select-props" asp-for="RepairingModelType" asp-items="@equipmentTypes"></select>
             </div>
