--- a/EquipmentRepairServiceCenter.ASP/Views/RepairingModels/Create.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/RepairingModels/Create.cshtml
@@ -54,7 +54,7 @@
 
         <div class="action-btn-container">
             <button class="action-btn" type="submit">Create</button>
-            <a class="back-btn" href="/Home/AdminsPage">Back</a>
+            <a class="back-btn" href="/RepairingModels/GetAll">Back</a>
         </div>
     </form>
 </div>
