--- a/EquipmentRepairServiceCenter.ASP/Views/_ViewImports.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/_ViewImports.cshtml
@@ -1,9 +1,11 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
-@using EquipmentRepairServiceCenter.Domain.Models.User
+@using EquipmentRepairServiceCenter.Domain.Models.Users
+@using EquipmentRepairServiceCenter.DTO.Client
 @using EquipmentRepairServiceCenter.DTO.Employee
 @using EquipmentRepairServiceCenter.DTO.RepairingModel
 @using EquipmentRepairServiceCenter.DTO.Fault
+@using EquipmentRepairServiceCenter.DTO.ServicedStore
 @using EquipmentRepairServiceCenter.DTO.SparePart
 @using EquipmentRepairServiceCenter.DTO.User
 @using EquipmentRepairServiceCenter.DTO.UsedSparePart
