--- a/EquipmentRepairServiceCenter.ASP/Views/Employees/GetAll.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Employees/GetAll.cshtml
@@ -15,7 +15,7 @@
         <button style="margin-top: 10px" class="action-btn" type="submit">Search</button>
     </form>  
 
-    <a class="a-create">Create</a>
+    <a href="/Accounts/RegisterEmployee" class="a-create">Create</a>
 
     <table class="table">
         <thead>
@@ -40,11 +40,11 @@
                     <td>@employee.MiddleName</td>
                     <td>@employee.Position</td>
                     <td>@employee.WorkExperienceInYears</td>
-                    <td><a class="ud-button">Update</a></td>
-                    <td><a class="ud-button">Delete</a></td>
+                    <td><a href="/Employees/Update?id=@employee.Id" class="ud-button">Update</a></td>
+                    <td><a href="/Employees/Delete?id=@employee.Id" class="ud-button">Delete</a></td>
                 </tr>
             }
         </tbody>
     </table>
-    <a class="back-btn" href="/Home/AdminsPage">Back</a>
+    <a class="back-btn" href="/Employees/GetAll">Back</a>
 </div>
