--- a/EquipmentRepairServiceCenter.ASP/Views/Faults/Update.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Faults/Update.cshtml
@@ -33,7 +33,7 @@
 
         <div class="action-btn-container">
             <button class="action-btn" type="submit">Update</button>
-            <a class="back-btn" href="/Home/AdminsPage">Back</a>
+            <a class="back-btn" href="/Faults/GetAll">Back</a>
         </div>
     </form>
 </div>
