--- a/EquipmentRepairServiceCenter.ASP/Views/RepairingModels/Update.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/RepairingModels/Update.cshtml
@@ -41,7 +41,7 @@
 
         <div class="action-btn-container">
             <button class="action-btn" type="submit">Update</button>
-            <a class="back-btn" href="/RepairingModels/GetAllForUpdate">Back</a>
+            <a class="back-btn" href="/RepairingModels/GetAll">Back</a>
         </div>
     </form>
 
