--- a/EquipmentRepairServiceCenter.ASP/Views/Employees/GetAll.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Employees/GetAll.cshtml
@@ -2,9 +2,11 @@
 
 @{
     ViewData["Title"] = "Employees";
+
+    int index = 1;
 }
 
-<div>
+<div style="padding-bottom: 30px;">
     <h3 class="h3-above-table">Employees</h3>
 
     <form class="getting-form" asp-action="GetAllByProps" method="get">
@@ -20,6 +22,7 @@
     <table class="table">
         <thead>
             <tr>
+                <th>Number</th>
                 <th>Id</th>
                 <th>Surname</th>
                 <th>Name</th>
@@ -34,6 +37,7 @@
             @foreach (var employee in @Model)
             {
                 <tr>
+                    <td>@index</td>
                     <td>@employee.Id</td>
                     <td>@employee.Surname</td>
                     <td>@employee.Name</td>
@@ -43,8 +47,12 @@
                     <td><a href="/Employees/Update?id=@employee.Id" class="ud-button">Update</a></td>
                     <td><a href="/Employees/Delete?id=@employee.Id" class="ud-button">Delete</a></td>
                 </tr>
+
+                index++;
             }
         </tbody>
     </table>
+
+    <a href="/Employees/GetMore" class="a-create">Show 20 more entries</a>
     <a class="back-btn" href="/Employees/GetAll">Back</a>
 </div>
