--- a/EquipmentRepairServiceCenter.ASP/Views/ServicedStores/GetAll.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/ServicedStores/GetAll.cshtml
@@ -2,9 +2,11 @@
 
 @{
     ViewData["Title"] = "Serviced Stores";
+
+    int index = 1;
 }
 
-<div>
+<div style="padding-bottom: 30px;">
     <h3 class="h3-above-table">Serviced Stores</h3>
 
     <a href="/ServicedStores/Create" class="a-create">Create</a>
@@ -12,6 +14,7 @@
     <table class="table">
         <thead>
             <tr>
+                <th>Number</th>
                 <th>Id</th>
                 <th>Name</th>
                 <th>Address</th>
@@ -24,6 +27,7 @@
             @foreach (var servicedStore in @Model)
             {
                 <tr>
+                    <td>@index</td>
                     <td>@servicedStore.Id</td>
                     <td>@servicedStore.Name</td>
                     <td>@servicedStore.Address</td>
@@ -31,8 +35,12 @@
                     <td><a href="/ServicedStores/Update?id=@servicedStore.Id" class="ud-button">Update</a></td>
                     <td><a href="/ServicedStores/Delete?id=@servicedStore.Id" class="ud-button">Delete</a></td>
                 </tr>
+
+                index++;
             }
         </tbody>
     </table>
+
+    <a href="/ServicedStores/GetMore" class="a-create">Show 20 more entries</a>
     <a class="back-btn" href="/Home/AdminsPage">Back</a>
 </div>
