added sorting for clients

--- a/EquipmentRepairServiceCenter.ASP/Views/Clients/GetAll.cshtml
+++ b/EquipmentRepairServiceCenter.ASP/Views/Clients/GetAll.cshtml
@@ -16,8 +16,8 @@
             <tr>
                 <th>Number</th>
                 <th>Id</th>
-                <th>Surname</th>
-                <th>Name</th>
+                <th><a href="/Clients/Get?sortedFieldNumber=1">Surname 🠕🠗</a></th>
+                <th><a href="/Clients/Get?sortedFieldNumber=2">Name 🠕🠗</a></th>
                 <th>Middle Name</th>
                 <th>Update</th>
                 <th>Delete</th>
